Playing with terraform

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,23 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore all terraform.tfvars files
+**/terraform.tfvars
+
+# Do not ignore terraform.tfvars.example files
+!**/terraform.tfvars.example
+
+# Ansible
+.vault_pass.txt
+*.retry
+.vagrant/
+
+# Docker
+*.env
+*.log
+docker-compose.override.yml
+
+# Other
+.idea/
+.DS_Store
