--- a/environments/aws/dev/terraform.tfvars.example
+++ b/environments/aws/dev/terraform.tfvars.example
@@ -13,8 +13,8 @@ vpc_id = ""
 # KUBERNETES
 
 db_instance_type = "t3.micro"
-eks_cluster_name = "eyelevel"
-eks_cluster_version = "1.30"
+cluster_name = "eyelevel"
+cluster_version = "1.30"
 
 
 # NETWORK
