--- a/modules/mysql/helm_chart/templates/pvc.yaml
+++ b/modules/mysql/helm_chart/templates/pvc.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pvc
+  name: "{{ .Values.service.name }}-pvc"
+  labels:
+    type: "{{ .Values.persistence.storageClass }}"
 spec:
-  storageClassName: "local-storage"
+  storageClassName: "{{ .Values.persistence.storageClass }}"
   accessModes:
-    - ReadWriteOnce
+    - {{ index .Values.persistence.accessModes 0 }}
   resources:
     requests:
-      storage: 1Gi
+      storage: "{{ .Values.persistence.size }}"
