--- a/modules/mysql/helm_chart/hpa.yaml
+++ b/modules/mysql/helm_chart/hpa.yaml
@@ -1,13 +1,13 @@
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: mysql-hpa
-  namespace: default
+  name: "{{ .Values.service.name }}-hpa"
+  namespace: "{{ .Values.service.namespace }}"
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: StatefulSet
-    name: mysql
+    name: "{{ .Values.service.name }}"
   minReplicas: 1
   maxReplicas: 1
   metrics:
