--- a/modules/mysql/helm_chart/templates/pv.yaml
+++ b/modules/mysql/helm_chart/templates/pv.yaml
@@ -1,13 +1,23 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mysql-pv
+  name: "{{ .Values.service.name }}-pv"
+  labels:
+    type: "{{ .Values.persistence.storageClass }}"
 spec:
   capacity:
-    storage: 1Gi
+    storage: "{{ .Values.persistence.size }}"
   accessModes:
-    - ReadWriteOnce
+    - {{ index .Values.persistence.accessModes 0 }}
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: "local-storage"
+  storageClassName: "{{ .Values.persistence.storageClass }}"
   local:
-    path: /mnt/disks/mysql-data
+    path: "{{ .Values.persistence.localPath }}"
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - "{{ .Values.service.node }}"
