--- a/modules/mysql/helm_chart/templates/service.yaml
+++ b/modules/mysql/helm_chart/templates/service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: "{{ .Values.service.name }}"
+  labels:
+    app: "{{ .Values.service.name }}"
 spec:
   ports:
     - protocol: TCP
-      port: 3306
-      targetPort: 3306
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
   selector:
-    app: mysql
-  type: ClusterIP
+    app: "{{ .Values.service.name }}"
+  type: "{{ .Values.service.type }}"
