--- a/modules/mysql/helm_chart/chart.yaml
+++ b/modules/mysql/helm_chart/chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: mysql
-description: A Helm chart for MySQL
-version: 1.0.0
-appVersion: "8.0"
+name: "{{ .Values.service.name }}"
+description: "A Helm chart for {{ .Values.service.name }}"
+version: 0.0.1
+appVersion: "{{ .Values.image.version }}"
