Redis and MySQL

--- a/environments/private/env.auto.tfvars.example
+++ b/environments/private/env.auto.tfvars.example
@@ -1,11 +1,31 @@
 # GLOBALS
 
 kube_config_path = "~/.kube/config"
+namespace = "eyelevel"
+pv_class = "local-storage"
+
+
+# CACHE
+
+cache_node = "crc"
+cache_service = "redis"
+cache_version = "6.1"
+
+cache_image_pull = "Always"
+cache_image_tag = "latest"
+cache_image_url = "public.ecr.aws/c9r4x6y5/eyelevel/redis"
+cache_ip_type = "ClusterIP"
+cache_mount_path = "/mnt/redis"
+cache_port = 6379
+
+cache_pv_access = "ReadWriteMany"
+cache_pv_path = "/Users/benjaminfletcher/mnt/redis"
+cache_pv_size = "1Gi"
+cache_replicas = 1
 
 
 # DATABASE
 
-db_namespace = "eyelevel"
 db_node = "crc"
 db_service = "mysql"
 db_version = "8.0"
@@ -23,7 +43,6 @@ db_root_password = "rootpassword"
 db_username = "eyelevel"
 
 db_pv_access = "ReadWriteMany"
-db_pv_class = "local-storage"
 db_pv_path = "/Users/benjaminfletcher/mnt/mysql"
 db_pv_size = "1Gi"
 db_replicas = 1
