Kafka with operator

--- a/environments/private/env.auto.tfvars.example
+++ b/environments/private/env.auto.tfvars.example
@@ -1,5 +1,6 @@
 # GLOBALS
 
+create_all = true
 kube_config_path = "~/.kube/config"
 namespace = "eyelevel"
 pv_class = "local-storage"
@@ -46,3 +47,22 @@ db_pv_access = "ReadWriteMany"
 db_pv_path = "/Users/benjaminfletcher/mnt/mysql"
 db_pv_size = "1Gi"
 db_replicas = 1
+
+
+# STREAM
+
+stream_chart = "oci://quay.io/strimzi-helm/strimzi-kafka-operator"
+stream_chart_version = "0.35.0"
+stream_service = "kafka"
+stream_version = "3.4.0"
+
+stream_port = 9092
+stream_cpu_limits = "200m"
+stream_cpu_requests = "100m"
+stream_memory_limits = "512Mi"
+stream_memory_requests = "256Mi"
+stream_replicas_operator = 3
+stream_replicas_service = 3
+stream_replicas_zookeeper = 3
+stream_storage_service = "2Gi"
+stream_storage_zookeeper = "1Gi"
