--- a/environments/private/env.auto.tfvars.example
+++ b/environments/private/env.auto.tfvars.example
@@ -49,6 +49,30 @@ db_pv_size = "1Gi"
 db_replicas = 1
 
 
+# FILE
+
+file_chart_operator = "minio-operator/operator"
+file_chart_tenant = "minio-operator/tenant"
+file_chart_repository = "https://operator.min.io"
+file_chart_repository_name = "minio-operator"
+file_chart_operator_version = "6.0.3"
+file_chart_tenant_version = "6.0.3"
+file_service = "minio"
+file_version = "6.0.3"
+
+file_cpu_limits = "4"
+file_cpu_requests = "2"
+file_memory_limits = "8Gi"
+file_memory_requests = "4Gi"
+file_pool_server = 4
+file_pool_server_volumes = 4
+file_pool_size = "1Ti"
+file_pv_access = "ReadWriteMany"
+file_pv_path = "/Users/benjaminfletcher/mnt/minio"
+file_replicas_operator = 2
+file_replicas_tenant = 2
+
+
 # STREAM
 
 stream_chart = "oci://quay.io/strimzi-helm/strimzi-kafka-operator"
