Open Search, redis, MySQL

--- a/environments/private/env.auto.tfvars.example
+++ b/environments/private/env.auto.tfvars.example
@@ -1,5 +1,6 @@
 # GLOBALS
 
+cluster_type = "openshift"
 create_all = true
 kube_config_path = "~/.kube/config"
 namespace = "eyelevel"
@@ -10,46 +11,54 @@ pv_class = "local-storage"
 
 cache_node = "crc"
 cache_service = "redis"
-cache_version = "6.1"
+cache_bundle_version = "v7.4.6-2"
 
+cache_cpu_limits = "2"
+cache_cpu_requests = "2"
+cache_memory_limits = "16Gi"
+cache_memory_requests = "16Gi"
+cache_replicas = 3
+
+# LOCAL CACHE
+
+cache_version = "6.1"
 cache_image_pull = "Always"
 cache_image_tag = "latest"
 cache_image_url = "public.ecr.aws/c9r4x6y5/eyelevel/redis"
 cache_ip_type = "ClusterIP"
 cache_mount_path = "/mnt/redis"
 cache_port = 6379
-
 cache_pv_access = "ReadWriteMany"
 cache_pv_path = "/Users/benjaminfletcher/mnt/redis"
 cache_pv_size = "1Gi"
-cache_replicas = 1
 
 
 # DATABASE
 
 db_node = "crc"
 db_service = "mysql"
-db_version = "8.0"
+db_service_version = "8.0"
 
-db_image_pull = "Always"
-db_image_tag = "latest"
-db_image_url = "public.ecr.aws/c9r4x6y5/eyelevel/mysql"
-db_ip_type = "ClusterIP"
-db_mount_path = "/var/lib/mysql"
-db_port = 3306
+db_backup_enable = true
+db_ha_proxy_enable = true
+db_ha_proxy_replicas = 3
+db_logcollector_enable = true
+db_pmm_enable = false
+db_pv_size = "20Gi"
+db_replicas = 3
+db_sql_proxy_enable = false
 
 db_name = "eyelevel"
 db_password = "password"
 db_root_password = "rootpassword"
 db_username = "eyelevel"
 
-db_pv_access = "ReadWriteMany"
-db_pv_path = "/Users/benjaminfletcher/mnt/mysql"
-db_pv_size = "1Gi"
-db_replicas = 1
-
 
 # FILE
+
+file_node = "crc"
+file_service = "minio"
+file_version = "6.0.3"
 
 file_chart_operator = "minio-operator/operator"
 file_chart_tenant = "minio-operator/tenant"
@@ -57,8 +66,6 @@ file_chart_repository = "https://operator.min.io"
 file_chart_repository_name = "minio-operator"
 file_chart_operator_version = "6.0.3"
 file_chart_tenant_version = "6.0.3"
-file_service = "minio"
-file_version = "6.0.3"
 
 file_cpu_limits = "4"
 file_cpu_requests = "2"
@@ -73,12 +80,34 @@ file_replicas_operator = 2
 file_replicas_tenant = 2
 
 
+# SEARCH
+
+search_node = "crc"
+search_service = "opensearch"
+search_version = "2.16.0"
+
+search_chart_name = "opensearch"
+search_chart_url = "https://opensearch-project.github.io/helm-charts"
+search_chart_version = "2.23.1"
+search_image_repository = "eyelevel/opensearch"
+search_image_tag = "latest"
+search_image_url = "public.ecr.aws/c9r4x6y5"
+
+search_cpu_requests = "1"
+search_memory_requests = "512Mi"
+search_pv_size = "1Gi"
+search_replicas = 3
+search_root_password = "R0otb_*t!kazs"
+
+
 # STREAM
+
+stream_node = "crc"
+stream_service = "kafka"
+stream_version = "3.4.0"
 
 stream_chart = "oci://quay.io/strimzi-helm/strimzi-kafka-operator"
 stream_chart_version = "0.35.0"
-stream_service = "kafka"
-stream_version = "3.4.0"
 
 stream_port = 9092
 stream_cpu_limits = "200m"
