--- a/modules/kafka/helm_chart/Chart.yaml
+++ b/modules/kafka/helm_chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: "{{ .Values.service.name }}"
-description: "A Helm chart for {{ .Values.service.name }}"
+name: "{{ .Release.Name }}"
+description: "A Helm chart for {{ .Release.Name }}"
 version: 0.0.1
 appVersion: "{{ .Values.service.version }}"
