--- a/environments/private/env.auto.tfvars.example
+++ b/environments/private/env.auto.tfvars.example
@@ -80,6 +80,16 @@ file_replicas_operator = 2
 file_replicas_tenant = 2
 
 
+# GROUNDX
+
+groundx_service = "groundx"
+groundx_version = "0.0.1"
+
+groundx_image_pull = "Always"
+groundx_image_tag = "latest"
+groundx_image_url = "public.ecr.aws/c9r4x6y5/eyelevel/groundx"
+
+
 # SEARCH
 
 search_node = "crc"
