Added config template values

--- a/environments/private/env.auto.tfvars.example
+++ b/environments/private/env.auto.tfvars.example
@@ -33,6 +33,11 @@ cache_pv_path = "/Users/benjaminfletcher/mnt/redis"
 cache_pv_size = "1Gi"
 
 
+# DASHBOARD
+
+dashboard_service = dashboard
+
+
 # DATABASE
 
 db_node = "crc"
@@ -83,11 +88,43 @@ file_replicas_tenant = 2
 # GROUNDX
 
 groundx_service = "groundx"
+groundx_service_key = "0c2f6b3e-0746-4280-8ef2-2c65f596b40b"
+groundx_service_username = "0c2f6b3e-0746-4280-8ef2-2c65f596b40b"
 groundx_version = "0.0.1"
 
 groundx_image_pull = "Always"
 groundx_image_tag = "latest"
 groundx_image_url = "public.ecr.aws/c9r4x6y5/eyelevel/groundx"
+
+
+# LAYOUT
+
+layout_service = "layout"
+
+
+# LAYOUT WEBHOOK
+
+layout_webhook_service = "layout-webhook"
+
+
+# QUEUE
+
+queue_service = "queue"
+
+
+# PREPROCESS
+
+preprocess_service = "preprocess"
+
+
+# PROCESS
+
+process_service = "process"
+
+
+# RANKER
+
+ranker_service = "ranker"
 
 
 # SEARCH
@@ -109,6 +146,10 @@ search_pv_size = "1Gi"
 search_replicas = 3
 search_root_password = "R0otb_*t!kazs"
 
+search_index = "prod-1"
+search_password = "password"
+search_user = "eyelevel"
+
 
 # STREAM
 
@@ -129,3 +170,13 @@ stream_replicas_service = 3
 stream_replicas_zookeeper = 3
 stream_storage_service = "2Gi"
 stream_storage_zookeeper = "1Gi"
+
+
+# SUMMARY
+
+summary_service = "summary"
+
+
+# UPLOAD
+
+upload_service = "upload"
