Added ranker and fixed groundx bugs

--- a/environments/private/env.auto.tfvars.example
+++ b/environments/private/env.auto.tfvars.example
@@ -1,17 +1,14 @@
 # GLOBALS
 
 cluster_type = "openshift"
-create_all = true
 kube_config_path = "~/.kube/config"
-namespace = "eyelevel"
-pv_class = "local-storage"
+
+create_all = true
 
 
 # CACHE
 
 cache_node = "crc"
-cache_service = "redis"
-cache_bundle_version = "v7.4.6-2"
 
 cache_cpu_limits = "2"
 cache_cpu_requests = "2"
@@ -21,28 +18,18 @@ cache_replicas = 3
 
 # LOCAL CACHE
 
-cache_version = "6.1"
-cache_image_pull = "Always"
-cache_image_tag = "latest"
-cache_image_url = "public.ecr.aws/c9r4x6y5/eyelevel/redis"
-cache_ip_type = "ClusterIP"
-cache_mount_path = "/mnt/redis"
-cache_port = 6379
-cache_pv_access = "ReadWriteMany"
 cache_pv_path = "/Users/benjaminfletcher/mnt/redis"
 cache_pv_size = "1Gi"
 
 
 # DASHBOARD
 
-dashboard_service = dashboard
+dashboard_node = "crc"
 
 
 # DATABASE
 
 db_node = "crc"
-db_service = "mysql"
-db_service_version = "8.0"
 
 db_backup_enable = true
 db_ha_proxy_enable = true
@@ -62,15 +49,6 @@ db_username = "eyelevel"
 # FILE
 
 file_node = "crc"
-file_service = "minio"
-file_version = "6.0.3"
-
-file_chart_operator = "minio-operator/operator"
-file_chart_tenant = "minio-operator/tenant"
-file_chart_repository = "https://operator.min.io"
-file_chart_repository_name = "minio-operator"
-file_chart_operator_version = "6.0.3"
-file_chart_tenant_version = "6.0.3"
 
 file_cpu_limits = "4"
 file_cpu_requests = "2"
@@ -79,7 +57,6 @@ file_memory_requests = "4Gi"
 file_pool_server = 4
 file_pool_server_volumes = 4
 file_pool_size = "1Ti"
-file_pv_access = "ReadWriteMany"
 file_pv_path = "/Users/benjaminfletcher/mnt/minio"
 file_replicas_operator = 2
 file_replicas_tenant = 2
@@ -87,58 +64,44 @@ file_replicas_tenant = 2
 
 # GROUNDX
 
-groundx_service = "groundx"
-groundx_service_key = "0c2f6b3e-0746-4280-8ef2-2c65f596b40b"
-groundx_service_username = "0c2f6b3e-0746-4280-8ef2-2c65f596b40b"
-groundx_version = "0.0.1"
-
-groundx_image_pull = "Always"
-groundx_image_tag = "latest"
-groundx_image_url = "public.ecr.aws/c9r4x6y5/eyelevel/groundx"
+groundx_node = "crc"
 
 
 # LAYOUT
 
-layout_service = "layout"
+layout_api_node = "crc"
+layout_inference_node = "crc"
 
 
 # LAYOUT WEBHOOK
 
-layout_webhook_service = "layout-webhook"
+layout_webhook_node = "crc"
 
 
 # QUEUE
 
-queue_service = "queue"
+queue_node = "crc"
 
 
 # PREPROCESS
 
-preprocess_service = "preprocess"
+preprocess_node = "crc"
 
 
 # PROCESS
 
-process_service = "process"
+process_node = "crc"
 
 
 # RANKER
 
-ranker_service = "ranker"
+ranker_api_node = "crc"
+ranker_inference_node = "crc"
 
 
 # SEARCH
 
 search_node = "crc"
-search_service = "opensearch"
-search_version = "2.16.0"
-
-search_chart_name = "opensearch"
-search_chart_url = "https://opensearch-project.github.io/helm-charts"
-search_chart_version = "2.23.1"
-search_image_repository = "eyelevel/opensearch"
-search_image_tag = "latest"
-search_image_url = "public.ecr.aws/c9r4x6y5"
 
 search_cpu_requests = "1"
 search_memory_requests = "512Mi"
@@ -154,13 +117,7 @@ search_user = "eyelevel"
 # STREAM
 
 stream_node = "crc"
-stream_service = "kafka"
-stream_version = "3.4.0"
 
-stream_chart = "oci://quay.io/strimzi-helm/strimzi-kafka-operator"
-stream_chart_version = "0.35.0"
-
-stream_port = 9092
 stream_cpu_limits = "200m"
 stream_cpu_requests = "100m"
 stream_memory_limits = "512Mi"
@@ -174,9 +131,10 @@ stream_storage_zookeeper = "1Gi"
 
 # SUMMARY
 
-summary_service = "summary"
+summary_api_node = "crc"
+summary_inference_node = "crc"
 
 
 # UPLOAD
 
-upload_service = "upload"
+upload_node = "crc"
