--- a/modules/ranker/api/helm_chart/templates/deployment.yaml
+++ b/modules/ranker/api/helm_chart/templates/deployment.yaml
@@ -19,8 +19,7 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: "{{ .Values.image.pull }}"
         ports:
-        - port: 80
-          targetPort: 8080
+        - containerPort: 8080
           protocol: TCP
         securityContext:
           runAsUser: {{ .Values.securityContext.runAsUser }}
