--- a/modules/groundx/helm_chart/templates/deployment.yaml
+++ b/modules/groundx/helm_chart/templates/deployment.yaml
@@ -15,9 +15,22 @@ spec:
         app: {{ .Values.service.name }}
     spec:
       initContainers:
-      - name: wait-for-services
-        image: busybox
-        command: ["/app/wait-for-it.sh", "{{ .Values.dependencies.cache }}", "-t", "300", "--", "{{ .Values.dependencies.database }}", "-t", "300"]
+      - name: wait-for-cache
+        image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
+        imagePullPolicy: "Always"
+        command: ['sh', '-c', "until nc -z {{ .Values.dependencies.cache }} 6379; do echo waiting for cache; sleep 2; done"] 
+      - name: wait-for-database
+        image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
+        imagePullPolicy: "Always"
+        command: ['sh', '-c', "until nc -z {{ .Values.dependencies.database }} 3306; do echo waiting for database; sleep 2; done"]
+      - name: wait-for-stream
+        image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
+        imagePullPolicy: "Always"
+        command: ['sh', '-c', "until nc -z {{ .Values.dependencies.stream }} 9092; do echo waiting for stream; sleep 2; done"]
+      - name: wait-for-file-storage
+        image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
+        imagePullPolicy: "Always"
+        command: ['sh', '-c', "until nc -z {{ .Values.dependencies.file }} 9000; do echo waiting for file storage; sleep 2; done"]
       containers:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
