--- a/modules/ranker/inference/helm_chart/templates/deployment.yaml
+++ b/modules/ranker/inference/helm_chart/templates/deployment.yaml
@@ -14,6 +14,11 @@ spec:
       labels:
         app: {{ .Values.service.name }}
     spec:
+      initContainers:
+      - name: wait-for-cache
+        image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
+        imagePullPolicy: "Always"
+        command: ['sh', '-c', "until nc -z {{ .Values.dependencies.cache }} 6379; do echo waiting for cache; sleep 2; done"] 
       containers:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
