--- a/environments/private/admin/env.auto.tfvars.example
+++ b/environments/private/admin/env.auto.tfvars.example
@@ -1,5 +1,13 @@
 # GLOBALS
 
+# generate using uuid.sh
+admin_api_key = "c3dcbb8d-23f5-40fe-8f61-359144a40391"
+# generate using uuid.sh
+admin_username = "758a83e3-e1bc-40b5-aa37-a97ec0210eee"
+
+admin_email = "support@yourcompany.com"
+admin_password = "password"
+
 cluster_type = "openshift"
 kube_config_path = "~/.kube/config"
 
