--- a/modules/test/curl.yaml
+++ b/modules/test/curl.yaml
@@ -6,6 +6,6 @@ metadata:
 spec:
   containers:
   - name: curl-container
-    image: curlimages/curl:latest  # This image has curl pre-installed
-    command: [ "sleep", "3600" ]   # Keep the pod running for testing
+    image: curlimages/curl:latest
+    command: [ "sleep", "3600" ]
   restartPolicy: Never
