--- a/modules/ranker/api/helm_chart/Chart.yaml
+++ b/modules/ranker/api/helm_chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: "{{ .Release.Name }}"
-description: "A Helm chart for {{ .Release.Name }}"
+name: "ranker API"
+description: "A Helm chart for ranker API"
 version: 0.0.1
-appVersion: "{{ .Values.service.version }}"
+appVersion: "0.0.1"
