--- a/modules/ranker/api/helm_chart/templates/deployment.yaml
+++ b/modules/ranker/api/helm_chart/templates/deployment.yaml
@@ -23,6 +23,7 @@ spec:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: "{{ .Values.image.pull }}"
+        command: ["uvicorn", "search_server:app", "--host", "0.0.0.0", "--port", "8080"]
         ports:
         - containerPort: 8080
           protocol: TCP
@@ -35,13 +36,13 @@ spec:
             path: /health
             port: 8080
           initialDelaySeconds: 30
-          periodSeconds: 10
+          periodSeconds: 30
         readinessProbe:
           httpGet:
             path: /health
             port: 8080
           initialDelaySeconds: 10
-          periodSeconds: 5
+          periodSeconds: 30
         volumeMounts:
         - name: config-volume
           mountPath: /app/config.py
