--- a/modules/groundx/helm_chart/templates/deployment.yaml
+++ b/modules/groundx/helm_chart/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.service.name }}
+  namespace: {{ .Values.service.namespace }}
   labels:
     app: {{ .Values.service.name }}
 spec:
@@ -31,10 +32,6 @@ spec:
         image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
         imagePullPolicy: "Always"
         command: ['sh', '-c', "until nc -z {{ .Values.dependencies.database }} 3306; do echo waiting for database; sleep 2; done"]
-      - name: wait-for-stream
-        image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
-        imagePullPolicy: "Always"
-        command: ['sh', '-c', "until nc -z {{ .Values.dependencies.stream }} 9092; do echo waiting for stream; sleep 2; done"]
       containers:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
