--- a/modules/redis/helm_chart/templates/deployment.yaml
+++ b/modules/redis/helm_chart/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: "{{ .Values.service.name }}"
+  namespace: "{{ .Values.service.namespace }}"
   labels:
     app: "{{ .Values.service.name }}"
 spec:
