Stubbed out all pods

--- a/environments/private/admin/env.auto.tfvars.example
+++ b/environments/private/admin/env.auto.tfvars.example
@@ -77,6 +77,7 @@ groundx_node = "crc"
 
 layout_api_node = "crc"
 layout_inference_node = "crc"
+layout_process_node = "crc"
 
 
 # LAYOUT WEBHOOK
@@ -84,19 +85,19 @@ layout_inference_node = "crc"
 layout_webhook_node = "crc"
 
 
-# QUEUE
+# PRE-PROCESS
 
-queue_node = "crc"
-
-
-# PREPROCESS
-
-preprocess_node = "crc"
+pre_process_node = "crc"
 
 
 # PROCESS
 
 process_node = "crc"
+
+
+# QUEUE
+
+queue_node = "crc"
 
 
 # RANKER
