Progress on layout pods

--- a/environments/private/admin/env.auto.tfvars.example
+++ b/environments/private/admin/env.auto.tfvars.example
@@ -75,9 +75,12 @@ groundx_node = "crc"
 
 # LAYOUT
 
-layout_api_node = "crc"
-layout_inference_node = "crc"
-layout_process_node = "crc"
+layout_nodes = {
+  api       = "crc"
+  inference = "crc"
+  ocr       = "crc"
+  process   = "crc"
+}
 
 
 # LAYOUT WEBHOOK
