--- a/modules/layout/ocr/helm_chart/templates/deployment.yaml
+++ b/modules/layout/ocr/helm_chart/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
           - /bin/sh
           - -c
           - |
-            export PYTHONPATH=/app && celery -A document.celery_process.app worker --loglevel=INFO --concurrency=1 --queues={{ .Values.queues }}
+            export PYTHONPATH=/app && celery -A document.celery_process.app worker --loglevel=INFO --concurrency=1 --queues=ocr_queue
         securityContext:
           runAsUser: {{ .Values.securityContext.runAsUser }}
         livenessProbe:
