--- a/environments/private/admin/env.auto.tfvars.example
+++ b/environments/private/admin/env.auto.tfvars.example
@@ -1,150 +1,262 @@
 # GLOBALS
 
+admin = {
 # generate using uuid.sh
-admin_api_key = "c3dcbb8d-23f5-40fe-8f61-359144a40391"
+  api_key = "c3dcbb8d-23f5-40fe-8f61-359144a40391"
 # generate using uuid.sh
-admin_username = "758a83e3-e1bc-40b5-aa37-a97ec0210eee"
+  username = "758a83e3-e1bc-40b5-aa37-a97ec0210eee"
 
-admin_email = "support@yourcompany.com"
-admin_password = "password"
+  email = "support@yourcompany.com"
+  password = "password"
+}
 
-cluster_type = "openshift"
-kube_config_path = "~/.kube/config"
+cluster = {
+  internet_access  = true
+  kube_config_path = "~/.kube/config"
+  role             = "developer"
+  type             = "openshift"
+}
 
-create_all = true
+create = {
+  all            = true
+  ingest         = true
+  search         = true
+
+  groundx        = true
+  kafka          = true
+  layout         = true
+  layout_webhook = true
+  minio          = true
+  mysql          = true
+  opensearch     = true
+  pre_process    = true
+  process        = true
+  queue          = true
+  ranker         = true
+  redis          = true
+  summary        = true
+  summary_client = true
+  upload         = true
+}
 
 
 # CACHE
 
-cache_node = "crc"
-
-cache_cpu_limits = "2"
-cache_cpu_requests = "2"
-cache_memory_limits = "16Gi"
-cache_memory_requests = "16Gi"
-cache_replicas = 3
-
-# LOCAL CACHE
-
-cache_pv_path = "/Users/benjaminfletcher/mnt/redis"
-cache_pv_size = "1Gi"
+cache = {
+  node       = "crc"
+  replicas   = 3
+  resources  = {
+    limits   = {
+      cpu    = "2"
+      memory = "16Gi"
+    }
+    requests = {
+      cpu    = "2"
+      memory = "16Gi"
+    }
+  }
+}
 
 
 # DASHBOARD
 
-dashboard_node = "crc"
+dashboard = {
+  node = "crc"
+}
 
 
 # DATABASE
 
-db_node = "crc"
-
-db_backup_enable = true
-db_ha_proxy_replicas = 3
-db_logcollector_enable = true
-db_pmm_enable = false
-db_pv_size = "20Gi"
-db_replicas = 3
-
-db_name = "eyelevel"
-db_password = "password"
-db_root_password = "rootpassword"
-db_username = "eyelevel"
+db = {
+  db_password      = "password"
+  db_root_password = "rootpassword"
+  proxy            = {
+    replicas       = 3
+    resources      = {
+      limits       = {
+        cpu        = "600m"
+        memory     = "1Gi"
+      }
+      requests     = {
+        cpu        = "600m"
+        memory     = "1Gi"
+      }
+    }
+  }
+  node             = "crc"
+  pv_size          = "20Gi"
+  replicas         = 3
+  resources        = {
+    limits         = {
+      cpu          = "600m"
+      memory       = "1Gi"
+    }
+    requests       = {
+      cpu          = "600m"
+      memory       = "1Gi"
+    }
+  }
+}
 
 
 # FILE
 
-file_node = "crc"
-
-file_cpu_limits = "4"
-file_cpu_requests = "2"
-file_memory_limits = "8Gi"
-file_memory_requests = "4Gi"
-file_pool_server = 4
-file_pool_server_volumes = 4
-file_pool_size = "1Ti"
-file_pv_path = "/Users/benjaminfletcher/mnt/minio"
-file_replicas_operator = 2
-file_replicas_tenant = 2
+file = {
+  access_key          = "minio"
+  access_secret       = "minio123"
+  node                = "crc"
+  operator            = {
+    replicas          = 2
+  }
+  pool_size           = "1Ti"
+  pool_servers        = 4
+  pool_server_volumes = 4
+  pv_path             = "/Users/USER/mnt/minio"
+  resources           = {
+    limits            = {
+      cpu             = "4"
+      memory          = "8Gi"
+    }
+    requests          = {
+      cpu             = "2"
+      memory          = "4Gi"
+    }
+  }
+  ssl                 = false
+}
 
 
 # GROUNDX
 
-groundx_node = "crc"
+groundx = {
+  load_balancer = {
+    port        = 80
+  }
+  node = "crc"
+}
 
 
 # LAYOUT
 
-layout_nodes = {
-  api       = "crc"
-  inference = "crc"
-  ocr       = "crc"
-  process   = "crc"
+layout = {
+  nodes = {
+    api       = "crc"
+    inference = "crc"
+    ocr       = "crc"
+    process   = "crc"
+  }
+}
+
+layout_ocr = {
+  credentials = "gcv_credentials.json"
+  project     = ""
+  type        = "google"
 }
 
 
 # LAYOUT WEBHOOK
 
-layout_webhook_node = "crc"
+layout_webhook = {
+  node = "crc"
+}
 
 
 # PRE-PROCESS
 
-pre_process_node = "crc"
+pre_process = {
+  node = "crc"
+}
 
 
 # PROCESS
 
-process_node = "crc"
+process = {
+  node = "crc"
+}
 
 
 # QUEUE
 
-queue_node = "crc"
+queue = {
+  node = "crc"
+}
 
 
 # RANKER
 
-ranker_api_node = "crc"
-ranker_inference_node = "crc"
+ranker = {
+  nodes = {
+    api       = "crc"
+    inference = "crc"
+  }
+}
 
 
 # SEARCH
 
-search_node = "crc"
-
-search_cpu_requests = "1"
-search_memory_requests = "512Mi"
-search_pv_size = "1Gi"
-search_replicas = 3
-search_root_password = "R0otb_*t!kazs"
-
-search_index = "prod-1"
-search_password = "password"
-search_user = "eyelevel"
+search = {
+  node          = "crc"
+  password      = "R0otb_*t!kazs"
+  pv_size       = "1Gi"
+  replicas      = 3
+  resources     = {
+    requests    = {
+      cpu       = "1"
+      memory    = "512Mi"
+    }
+  }
+  root_password = "R0otb_*t!kazs"
+}
 
 
 # STREAM
 
-stream_node = "crc"
-
-stream_cpu_limits = "200m"
-stream_cpu_requests = "100m"
-stream_memory_limits = "512Mi"
-stream_memory_requests = "256Mi"
-stream_replicas_operator = 3
-stream_replicas_service = 3
-stream_replicas_zookeeper = 3
-stream_storage_service = "2Gi"
-stream_storage_zookeeper = "1Gi"
+stream = {
+  node       = "crc"
+  operator   = {
+    replicas = 3
+  }
+  partitions = 3
+  resources  = {
+    limits   = {
+      cpu    = "4"
+      memory = "8Gi"
+    }
+    requests = {
+      cpu    = "2"
+      memory = "4Gi"
+    }
+  }
+  service    = {
+    replicas = 3
+    storage  = "20Gi"
+  }
+  zookeeper  = {
+    replicas = 3
+    storage  = "10Gi"
+  }
+}
 
 
 # SUMMARY
 
-summary_api_node = "crc"
-summary_inference_node = "crc"
+summary = {
+  nodes = {
+    api       = "crc"
+    inference = "crc"
+  }
+}
+
+
+# SUMMARY CLIENT
+
+summary_client = {
+  node = "crc"
+}
 
 
 # UPLOAD
 
-upload_node = "crc"
+upload = {
+  node = "crc"
+}
