--- a/modules/layout/process/helm_chart/templates/deployment.yaml
+++ b/modules/layout/process/helm_chart/templates/deployment.yaml
@@ -20,6 +20,10 @@ spec:
         image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
         imagePullPolicy: "Always"
         command: ['sh', '-c', "until nc -z {{ .Values.dependencies.cache }} 6379; do echo waiting for cache; sleep 2; done"] 
+      - name: wait-for-file-storage
+        image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
+        imagePullPolicy: "Always"
+        command: ['sh', '-c', "until nc -z {{ .Values.dependencies.file }} 9000; do echo waiting for file storage; sleep 2; done"]
       containers:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
